fix z-index

--- a/src/components/blur/blur.css
+++ b/src/components/blur/blur.css
@@ -7,6 +7,7 @@
     width: 100%;
     min-height: 100vh;
     display: none;
+    z-index: 222;
 }
 @media screen and (max-width:785px) {
     .blur{
