--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -75,10 +75,12 @@
     font-size: 18px;
     transition: left .8s;
     display: none;
+    z-index: 555;
 }
 .MobileNav .close{
     margin-bottom: 50px;
     cursor: pointer;
+    width: max-content;
 }
 .MobileNav .mobile__list{
     display: flex;
